@@ -1,40 +1,46 @@
 body {
   font-family: Verdana, Helvetica, sans-serif;
 }
+h1 {
+  color: #444;
+  font-size: 14pt;
+  font-style: italic;
+}
 table {
   color: #444;
+  border-spacing: 0px;
 }
 th {
-  font-weight: normal;
   background-color: #AAA;
   color: white;
   padding: 5px;
   width: 100px;
-  border-radius: 5px;
+  font-size: 11px;
 }
 td {
   text-align: center;
 }
+tr:hover {
+  background-color: #EEE;
+}
 .status {
   margin: 1px;
   padding: 1px 2px;
-  border-radius: 5px;
-  border: 1px solid #AAA;
   font-size: 11px;
+  border: 1px solid transparent;
 }
 .status:hover {
-  border: 1px solid #000;
-  -webkit-transition: border 0.5s linear;
+  border: 1px solid black;
 }
 .pass {
   background-color: #8FDF5F;
-  border: 1px solid #4F8530;
+  /* border: 1px solid #4F8530; */
 }
 .fail {
   background-color: #E98080;
-  border: 1px solid #A77272;
+  /* border: 1px solid #A77272; */
 }
 .pending {
   background-color: #FFFC6C;
-  border: 1px solid #C5C56D;
+  /* border: 1px solid #C5C56D; */
 }
